--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name=”author” content=”Your Name”>
-    <title>Title of Your Physical Animation</title>
+    <meta name=”author” content=”Henry Rugemer”>
+    <title>The Tragedy of the Poacher</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
-	<h1>👋 Hello World!</h1>
+	<h1>Cause and Effect Model</h1>
+	 <img src="pic_trulli.jpg" alt="Italian Trulli">
   	<p>
     In the body section is where you’ll write all of your HTML
     and/or copy-and-paste it from drafts you make in codepen.io
