--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <body>
 
 	<h1>Cause and Effect Model</h1>
-	 <img src="pic_trulli.jpg" alt="Italian Trulli">
+	 <img src="causeaffect.PNG" alt="Cause and Effect Model">
+  	<p>
+    In the body section is where you’ll write all of your HTML
+    and/or copy-and-paste it from drafts you make in codepen.io
+</p>
+
+<h1>Story Board</h1>
+	 <img src="causeaffect.PNG" alt="Story Board Image">
   	<p>
     In the body section is where you’ll write all of your HTML
     and/or copy-and-paste it from drafts you make in codepen.io
