--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 </p>
 
 <h1>Story Board</h1>
-	 <img src="causeaffect.PNG" alt="Story Board Image">
+	 <img src="storyboard.PNG" alt="Story Board Image">
+  	<p>
+    In the body section is where you’ll write all of your HTML
+    and/or copy-and-paste it from drafts you make in codepen.io
+</p>
+	  
+<h1>Characters and Set</h1>
+	 <img src="storyboard.PNG" alt="Inspiration">
   	<p>
     In the body section is where you’ll write all of your HTML
     and/or copy-and-paste it from drafts you make in codepen.io
