--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
 </p>
 	  
 <h1>Characters and Set</h1>
-	 <img src="storyboard.PNG" alt="Inspiration">
+	 <img src="imageinspiration.PNG" alt="Inspiration">
   	<p>
     In the body section is where you’ll write all of your HTML
     and/or copy-and-paste it from drafts you make in codepen.io
 </p>
-
+        <img src="imageinspiration.PNG" alt="Set">
+  	<p>
+    In the body section is where you’ll write all of your HTML
+    and/or copy-and-paste it from drafts you make in codepen.io
+</p>
   </body>
 </html>
