--- a/index.html
+++ b/index.html
@@ -36,17 +36,11 @@
 </p>
 	  
 <h1>Code and Technology</h1>
-	 <img src="imageinspiration.PNG" alt="Inspiration">
-  	<p>
-    In the body section is where you’ll write all of your HTML
-    and/or copy-and-paste it from drafts you make in codepen.io
-</p>
-	  
-<h1>Code and Technology</h1>
-	 <img src="imageinspiration.PNG" alt="Inspiration">
+	 <img src="code.PNG" alt="Inspiration">
   	<p>
     When you clap the pew pew sound plays and in the backround there is always this melody playing "- G D F E D E C5 " forever.
 </p>
+	  
 <h1>Video of Final Animation</h1>
 
   </body>
