--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 	<h1>Cause and Effect Model</h1>
 	 <img src="causeaffect.PNG" alt="Cause and Effect Model">
   	<p>
-    In the body section is where you’ll write all of your HTML
-    and/or copy-and-paste it from drafts you make in codepen.io
+    This model shows the cause and affects of poaching. Most poacher dont like their job and have no choice because they are poor. The only reason they poach is for
+money and a better life. There is a high demand for special horns and certain types of fur which leads to those animals getting hunted for and puts their species in 
+danger of existence. 
 </p>
 
 <h1>Story Board</h1>
@@ -42,6 +43,9 @@
 </p>
 	  
 <h1>Video of Final Animation</h1>
-
+<video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
   </body>
 </html>
