--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@ danger of existence.
 <h1>Story Board</h1>
 	 <img src="storyboard.PNG" alt="Story Board Image">
   	<p>
-    In the body section is where you’ll write all of your HTML
-    and/or copy-and-paste it from drafts you make in codepen.io
-</p>
+This story board was just a first draft. This was just the initial idea of how the story would go when filming we ended up adding some scenes and deleting some 
+scenes we just had this as a guide. For example in the story board the poacher kills himself but when filiming we decided that wasn't school appropriate so we
+made some adjustments. 
+	</p>
 	  
 <h1>Characters and Set</h1>
 	 <img src="imageinspiration.PNG" alt="Inspiration">
   	<p>
-    In the body section is where you’ll write all of your HTML
-    and/or copy-and-paste it from drafts you make in codepen.io
+When we started to form the characters with clay we needed some source of inspiration. We knew that we wanted to humans, a rihno, a snake and some backround details
+like the trees. To get inspiration for these creation we google some images of claymation characters and based our characters off of that. 
 </p>
         <img src="imageset.PNG" alt="Set">
   	<p>
-    In the body section is where you’ll write all of your HTML
-    and/or copy-and-paste it from drafts you make in codepen.io
+The images above are the characters and sett design that we used in the movie. We made all of these with our own hands with clay and cardboard in class. 
 </p>
 	  
 <h1>Code and Technology</h1>
