--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+	<h1>Midterm Peformance Task By: Henry Rugemer</h1>
 
 	<h1>Cause and Effect Model</h1>
 	 <img src="causeaffect.PNG" alt="Cause and Effect Model">
   	<p>
-    This model shows the cause and affects of poaching. Most poacher dont like their job and have no choice because they are poor. The only reason they poach is for
-money and a better life. There is a high demand for special horns and certain types of fur which leads to those animals getting hunted for and puts their species in 
+    This model shows the cause and affects of poaching. Most poacher's don't like their job and have no choice because they are poor. The only reason they poach is for
+money and a better life. There is a high demand for special horns and certain types of fur which leads to those animals getting hunted and puts their species in 
 danger of existence. 
 </p>
 
@@ -28,18 +29,18 @@ made some adjustments.
 <h1>Characters and Set</h1>
 	 <img src="imageinspiration.PNG" alt="Inspiration">
   	<p>
-When we started to form the characters with clay we needed some source of inspiration. We knew that we wanted to humans, a rihno, a snake and some backround details
-like the trees. To get inspiration for these creation we google some images of claymation characters and based our characters off of that. 
+When we started to form the characters with clay we needed some source of inspiration. We knew that we wanted two humans, a rihno, a snake, some backround details
+like the trees and the table and bed. To get inspiration for these creation we googled some images of claymation characters and based our characters off of that. 
 </p>
         <img src="imageset.PNG" alt="Set">
   	<p>
-The images above are the characters and sett design that we used in the movie. We made all of these with our own hands with clay and cardboard in class. 
+The images above are the characters and set design that we used in the movie. We made all of these with our own hands with clay and cardboard in class. 
 </p>
 	  
 <h1>Code and Technology</h1>
 	 <img src="code.PNG" alt="Inspiration">
   	<p>
-    When you clap the pew pew sound plays and in the backround there is always this melody playing "- G D F E D E C5 " forever.
+    When you clap the pew pew sound plays and in the backround there is always this melody playing "G D F E D E C5 " forever.
 </p>
 	  
 <h1>Video of Final Animation</h1>
